# framework-test

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  TESTPYPY.md  pyproject.toml
.github/workflows/: documentation.yml  main.yml  publish.yml
docs/: api.rst  conf.py  index.rst  installation.rst  usage.rst
src/framework_test/: __init__.py  solvers.py
tests/: test_basic.py
