[project]
name = "framework-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "John Fozard", email = "john.fozard@gmail.com" }
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.14"
dependencies = [
    "beartype>=0.22.9",
    "jax>=0.10.0",
    "jaxtyping>=0.3.9",
    "scipy>=1.17.1",
]

[project.urls]
Homepage = "https://github.com/jfozard/framework-test/"

[project.scripts]
framework-test = "framework_test:main"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=5.1.0",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-autodoc-typehints>=3.10.2",
    "sphinx-copybutton>=0.5.2",
]

[tool.ruff.lint]
extend-select = [
  "B",      # flake8-bugbear
  "I",      # isort
  "RUF",    # Ruff-specific
  "UP",     # pyupgrade
]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--showlocals"]
strict = true
filterwarnings = ["error"]
log_level = "INFO"
testpaths = [
  "tests",
]
